# app/Models/Cidade.php
@@ -7,6 +7,8 @@ use Illuminate\Database\Eloquent\Model;
 class Cidade extends Model
 {
     protected $table  = 'cidade';
-    
-    protected $fillable = ['cid_id','cid_nome','cid_uf'];
+
+    protected $primaryKey = 'cid_id';
+
+    protected $fillable = ['cid_nome','cid_uf'];
 }
