# app/Models/Lotacao.php
@@ -12,7 +12,9 @@ class Lotacao extends Model
 
     protected $table  = 'lotacao';
 
-    protected $fillable = ['lot_id','pes_id','unid_id','lot_data_lotacao','lot_data_remocao','lot_portaria'];
+    protected $primaryKey = 'lot_id';
+
+    protected $fillable = ['pes_id','unid_id','lot_data_lotacao','lot_data_remocao','lot_portaria'];
 
     public function pessoa()
     {
